src/Components/Main/Main.css
@import url('https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap');


* {
    margin: 0;
    padding: 0;
    user-select: none;
}

body::-webkit-scrollbar {
    width: 0px;

}




/* LAYOUT PRINCIPAL */

.Layout {
    height: 40rem;
    background-color: var(--font-color-cinza);
    color: #000;
    box-sizing: border-box;
    transition: all 0.6s linear;
}

.LayoutTextos {
    display: flex;
    flex-flow: column wrap;
    gap: 20px;
}

.LayoutTextos h1 {
    font-family: 'Exo', sans-serif;
    font-size: 2rem;
    padding-top: 4%;
    padding-left: 5%;
}

.Layout span {
    font-size: 20px;
    font-family: 'Exo', sans-serif;
    font-weight: 750;
    margin-left: 4%;
}

.LayoutTextos p {
    flex-wrap: wrap;
    max-width: 55%;
    margin-left: 3%;
    font-size: 18px;
    font-family: "Montserrat", sans-serif;
}

.LayoutTextos strong {
    color: var(--fonte-secundaria-clara);
}

.LayoutTextos strong:hover {
    color: var(--fonte-primaria-clara);
}

/* LAYOUT PRINCIPAL */

.container-techs {
    position: absolute;
    display: flex;
    width: 100px;
    padding: 15px;
    justify-content: center;
    flex-direction: column;
    gap: 26px;
    right: 1%;
    top: 16%;
}

.container-techs.dark h1 {
    color: var(--fonte-secundaria-escura);
    border-color: var(--fonte-secundaria-escura);
}

.container-techs.dark img {
    border-color: var(--fonte-secundaria-escura);
}

.container-techs h1 {
    text-align: center;
    font-size: 28px;
    border-bottom: 4px solid var(--fonte-secundaria-clara);
    color: var(--fonte-secundaria-clara);
    font-weight: 700;
    font-family: "Exo" , sans-serif;
}


.container-techs img {
    margin-left: 2rem;
    padding-bottom: 8px;
    border-bottom: 4px solid var(--fonte-secundaria-clara);
    width: 40px;
    height: 40px;
    align-items: center;
    transition: all 0.5s linear;
}


.container-techs img:hover {
    scale: 1.2;
    filter: saturate(1);
    transition: all 0.5s linear;
}


/*  BOTÃO  */

.container-botao {
    display: flex;
    flex-direction: column;
    gap: 18px;
    margin-left: 3%;
    margin-top: 1%;
}

.container-botao a {
    display: flex;
    width: 300px;
    height: 30px;
    border: 3.5px solid var(--fonte-secundaria-clara);
    border-radius: 25px;
    align-items: center;
    padding: 12px;
    text-decoration: none;
    font-size: 1rem;
    gap: 8px;
    font-weight: 700;
    font-family: 'Montserrat', sans-serif;
    justify-content: center;
    color: var(--fonte-secundaria-clara);
    box-shadow: inset 0px 0px 5px;
    transition: all 0.6s ease-in-out 6ms;

}

.container-botao a:hover {
    background-color: var(--fonte-primaria-clara);
    color: var(--fonte-secundaria-clara);
    transform: scale(0.985)rotateX(360deg);
    box-shadow: inset 0px 0px 25px;

}

.container-botao text:hover {
    color: var(--font-color-cinza);
}

/*  BOTÃO  */


/* RESPONSIVIDADE */

@media (max-width: 1040px) and (min-width: 350px) {


    .Layout {
        height: 55rem;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .LayoutTextos h1 {
        text-align: center;
        padding: 5% 0% 0%;
    }

    .LayoutTextos span {
        text-align: center;
        margin: 0%;
    }

    .LayoutTextos p {
        text-align: center;
        max-width: max-content;
        margin: 0% 8% 0%;
    }

    .Layout.dark .LayoutTextos p {
        border: none;
    }

    .container-botao {
        display: flex;
        align-items: center;
    }

    .container-botao a {
        width: 250px;
        height: 20px;
        padding: 10px;
    }

    .container-techs {
        position: relative;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: row;
        gap: 8px;
        margin-bottom: 20%;
    }
    
    .container-techs h1 {
        font-size: 0px;
        border: 0;
    }

    .container-techs img {
        margin-left: 0rem;
        padding: 6px;
        padding-bottom: 15%;
        border-bottom: none;
        width: 35px;
        height: 35px;
        align-items: center;
        transition: all 0.5s linear;
    }
}

/* RESPONSIVIDADE */


/* DARK MODE  */
.Layout.dark {
    background-color: var(--fonte-background-escura);
    color: var(--font-color-cinza);
}

.Layout.dark .container-botao a {
    border-color: var(--fonte-primaria-escura);
    color: var(--fonte-secundaria-escura);
}

.Layout.dark .container-botao a:hover {
    color: var(--fonte-background-escura);
    background-color: var(--fonte-primaria-escura);
    transform: scale(0.9)rotateX(360deg);
    box-shadow: inset 0px 0px 15px;
}

.Layout.dark .LayoutTextos strong {
    color: var(--fonte-secundaria-escura);
}

.Layout.dark .LayoutTextos strong:hover {
    color: var(--fonte-primaria-escura);
}

/* DARK MODE  */

